# postcard_proc_macro

./: Cargo.toml
simple-define-macro/: Cargo.toml
simple-define-macro/src/: lib.rs
src/: derives.rs  lib.rs  main.rs  msg_json.rs  process.rs  serde_derives.rs
src/legacy_protocol/: json.rs  msg.rs
src/legacy_protocol/msg/: flat.rs
