[workspace]
resolver = "2"
members = ["simple-define-macro"]

[package]
name = "postcard_proc_macro"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
simple-define-macro = { path = "./simple-define-macro" }

[dependencies]
anyhow = "1.0"
indexmap = "2.8"
intern = { path = "../link_ra/crates/intern/" }
paths = { path = "../link_ra/crates/paths/", features = ["serde1"] }
rustc-hash = "2.1"
simple-define-macro.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["unbounded_depth"] }
salsa = "0.19"
span = { path = "../link_ra/crates/span/" }
stdx = { path = "../link_ra/crates/stdx/" }
tt = { path = "../link_ra/crates/tt/" }
